--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -1265,7 +1265,8 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":framework",
-        ":core"
+        ":core",
+        "@farmhash_archive//:farmhash",
     ],
     alwayslink = 1,
 )
