--- a/tensorflow/core/kernels/CK/fused_tile_gemm/BUILD
+++ b/tensorflow/core/kernels/CK/fused_tile_gemm/BUILD
@@ -42,10 +42,12 @@ tf_kernel_library(
         "op.h",
         #"ck_irrelevant.h",
         "api.h",
+        "common.h",
     ],
     hdrs = [
         "op.h",
         "api.h",
+        "common.h",
         #"ck_irrelevant.h",
     ],
     deps = [":ck_deps_fused_tile_gemm"] +
@@ -62,4 +64,23 @@ tf_kernel_library(
         "-fexceptions",
     ],
     nocopts = "-fno-exceptions",
+)
+
+
+tf_gpu_cc_test(
+    name = "fused_tile_gemm_test",
+    size = "small",
+    srcs = ["op_test.cc"],
+    deps = [
+        ":fused_tile_gemm",
+        "//tensorflow/core/kernels:ops_testutil",
+        "//tensorflow/core/kernels:ops_util",
+        "//tensorflow/core:core_cpu",
+        "//tensorflow/core:framework",
+        "//tensorflow/core:lib",
+        "//tensorflow/core:protos_all_cc",
+        "//tensorflow/core:test",
+        "//tensorflow/core:test_main",
+        "//tensorflow/core:testlib",
+    ],
 )
