Exposing the custom ops

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -6633,11 +6633,21 @@ tf_kernel_library(
         ":fill_functor",
         ":ops_util",
         ":gpu_util_hdrs",
+        "//tensorflow/core:new_nn_ops_op_lib",
         "//tensorflow/core:framework",
         "//tensorflow/core:framework_internal",
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core:nn_ops_op_lib",
+        "//tensorflow/core/kernels/CK/fused_tile_gemm:fused_tile_gemm",
+        "//tensorflow/core/kernels/CK/fused_gemm_bias_add",
+        "//tensorflow/core/kernels/CK/gather_attention:gather_attention",
+        "//tensorflow/core/kernels/CK/gather_gemv:gather_gemv",
+        "//tensorflow/core/kernels/CK/gather_gemv2:gather_gemv2",
+        "//tensorflow/core/kernels/CK/gemm_layernorm_gemm:gemm_layernorm_gemm",
+        "//tensorflow/core/kernels/CK/gemm_layernorm_gemm_softmax_gemm:gemm_layernorm_gemm_softmax_gemm",
+        "//tensorflow/core/kernels/CK/gemm_row_softmax_gemm:gemm_row_softmax_gemm",
+        "//tensorflow/core/kernels/CK/gemv_softmax_gemv:gemv_softmax_gemv",
         "//third_party/eigen3",
     ],
 )
