--- a/tensorflow/core/kernels/CK/fused_tile_gemm/BUILD
+++ b/tensorflow/core/kernels/CK/fused_tile_gemm/BUILD
@@ -11,6 +11,7 @@ load(
     "//tensorflow:tensorflow.bzl",
     "tf_gpu_cc_test",
     "tf_kernel_library",
+    "tf_gpu_kernel_library",
 )
 load("@local_config_rocm//rocm:build_defs.bzl", "if_rocm")
 
@@ -32,32 +33,37 @@ cc_library(
     visibility = ["//visibility:public"],
 )
 
-tf_kernel_library(
-    name = "fused_tile_gemm",
+tf_gpu_kernel_library(
+    name = "fused_tile_gemm_cu",
     srcs = [
-        "op.cc",
-    ],
-    gpu_srcs = [
         "op.cu.cc",
         "op.h",
     ],
     hdrs = [
         "op.h",
     ],
-    deps = [":ck_deps"] +
-    select({
-        "//conditions:default": [
-            "@ck_archive//:ck",
-        ],
-    }) +
-    MATH_DEPS + [
-        "//tensorflow/core:new_nn_ops_op_lib",
-    ],
-    copts = [
+    deps = [
+        ":ck_deps",
+        "@ck_archive//:ck",
+    ] + MATH_DEPS,
+    gpu_copts = [
         "-std=c++17",
         "-fexceptions",
     ],
-    nocopts = "-fno-exceptions",
+)
+
+tf_kernel_library(
+    name = "fused_tile_gemm",
+    srcs = [
+        "op.cc",
+    ],
+    hdrs = [
+        "op.h",
+    ],
+    deps = [
+    ":fused_tile_gemm_cu",
+    "//tensorflow/core:new_nn_ops_op_lib",
+    ],
 )
 
 
