--- a/tensorflow/core/kernels/CK/gather_gemv/BUILD
+++ b/tensorflow/core/kernels/CK/gather_gemv/BUILD
@@ -11,6 +11,7 @@ load(
     "//tensorflow:tensorflow.bzl",
     "tf_gpu_cc_test",
     "tf_kernel_library",
+    "tf_gpu_kernel_library",
 )
 load("@local_config_rocm//rocm:build_defs.bzl", "if_rocm")
 
@@ -32,31 +33,36 @@ cc_library(
     visibility = ["//visibility:public"],
 )
 
+tf_gpu_kernel_library(
+    name = "gather_gemv_cu",
+    srcs = [
+        "op.cu.cc",
+    ],
+    hdrs = [
+        "op.h",
+    ],
+    deps = [":ck_deps",
+            "@ck_archive//:ck"] +
+    MATH_DEPS,
+    gpu_copts = [
+        "-std=c++17",
+        "-fexceptions",
+    ],
+    nocopts = "-fno-exceptions",
+)
+
 tf_kernel_library(
     name = "gather_gemv",
     srcs = [
         "op.cc",
     ],
-    gpu_srcs = [
-        "op.cu.cc",
-        "op.h",
-    ],
-    hdrs = [
-        "op.h",
-    ],
-    deps = [":ck_deps"] +
-    select({
-        "//conditions:default": [
+    hdrs = ["op.h"] + glob(["*.hpp"]),
+    deps = [":ck_deps",
             "@ck_archive//:ck",
-        ],
-    }) +
-    MATH_DEPS + [
-        "//tensorflow/core:new_nn_ops_op_lib",
-    ],
-    copts = [
-        "-std=c++17",
-        "-fexceptions",
-    ],
+            ":gather_gemv_cu",
+            "//tensorflow/core:new_nn_ops_op_lib",
+    ] + MATH_DEPS,
+    copts = ["-fexceptions",],
     nocopts = "-fno-exceptions",
 )
 
