--- a/tensorflow/core/kernels/CK/gather_gemv2/BUILD
+++ b/tensorflow/core/kernels/CK/gather_gemv2/BUILD
@@ -11,6 +11,7 @@ load(
     "//tensorflow:tensorflow.bzl",
     "tf_gpu_cc_test",
     "tf_kernel_library",
+    "tf_gpu_kernel_library",
 )
 load("@local_config_rocm//rocm:build_defs.bzl", "if_rocm")
 
@@ -32,34 +33,38 @@ cc_library(
     visibility = ["//visibility:public"],
 )
 
-tf_kernel_library(
-    name = "gather_gemv2",
+tf_gpu_kernel_library(
+    name = "gather_gemv2_cu",
     srcs = [
-        "op.cc",
-    ],
-    gpu_srcs = [
         "op.cu.cc",
-        "op.h",
     ],
     hdrs = [
         "op.h",
     ],
-    deps = [":ck_deps"] +
-    select({
-        "//conditions:default": [
-            "@ck_archive//:ck",
-        ],
-    }) +
-    MATH_DEPS + [
-        "//tensorflow/core:new_nn_ops_op_lib",
-    ],
-    copts = [
+    deps = [":ck_deps",
+            "@ck_archive//:ck"] +
+    MATH_DEPS,
+    gpu_copts = [
         "-std=c++17",
         "-fexceptions",
     ],
     nocopts = "-fno-exceptions",
 )
 
+tf_kernel_library(
+    name = "gather_gemv2",
+    srcs = [
+        "op.cc",
+    ],
+    hdrs = ["op.h"] + glob(["*.hpp"]),
+    deps = [":ck_deps",
+            "@ck_archive//:ck",
+            ":gather_gemv2_cu",
+            "//tensorflow/core:new_nn_ops_op_lib",
+    ] + MATH_DEPS,
+    copts = ["-fexceptions",],
+    nocopts = "-fno-exceptions",
+)
 
 tf_gpu_cc_test(
     name = "gather_gemv2_test",
