--- a/tensorflow/core/kernels/CK/gather_attention/BUILD
+++ b/tensorflow/core/kernels/CK/gather_attention/BUILD
@@ -40,8 +40,8 @@ tf_kernel_library(
     gpu_srcs = [
         "op.cu.cc",
         "op.h",
-    ] + glob(["*.hpp"]) + glob(["instances/*.cpp"]),
-    hdrs = ["op.h"] + glob(["*.hpp"]),
+    ] + glob(["instances/*.cpp"]),
+    hdrs = ["op.h"],
     deps = [":ck_deps"] +
     select({
         "//conditions:default": [
