--- a/tensorflow/core/kernels/CK/gemv_softmax_gemv/BUILD
+++ b/tensorflow/core/kernels/CK/gemv_softmax_gemv/BUILD
@@ -40,10 +40,10 @@ tf_kernel_library(
     gpu_srcs = [
         "op.cu.cc",
         "op.h",
-    ] + glob(["*.hpp"]) + glob(["instances/*.cpp"]),
+    ] + glob(["instances/*.cpp"]),
     hdrs = [
         "op.h",
-    ] + glob(["*.hpp"]),
+    ],
     deps = [":ck_deps"] +
     select({
         "//conditions:default": [
