use system rocprim

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -956,8 +956,6 @@ tf_kernel_library(
     deps = if_cuda([
         ":cuda_solvers",
         "@cub_archive//:cub",
-    ]) + if_rocm([
-        "@rocprim_archive//:rocprim",
     ]) + ARRAY_DEPS,
 )
 
@@ -1828,8 +1826,7 @@ tf_kernel_library(
     deps = DYNAMIC_DEPS + [
         ":fill_functor",
         ":gather_functor",
-    ] + if_cuda(["@cub_archive//:cub"])
-    + if_rocm(["@rocprim_archive//:rocprim"]),
+    ] + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
@@ -3013,7 +3010,7 @@ tf_kernel_library(
     name = "reduction_ops",
     gpu_srcs = ["reduction_gpu_kernels.cu.h"],
     prefix = "reduction_ops",
-    deps = MATH_DEPS + [":transpose_functor"] + if_cuda(["@cub_archive//:cub"]) + if_rocm(["@rocprim_archive//:rocprim"]),
+    deps = MATH_DEPS + [":transpose_functor"] + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
@@ -3534,7 +3531,6 @@ tf_kernel_library(
         "@cub_archive//:cub",
     ]) + if_rocm_is_configured([
         ":reduction_ops",
-        "@rocprim_archive//:rocprim",
     ])
 )
 
@@ -3572,8 +3568,6 @@ tf_kernel_library(
     prefix = "softmax_op",
     deps = NN_DEPS + [":reduction_ops",] + if_cuda([
         "@cub_archive//:cub",
-	]) + if_rocm([
-	"@rocprim_archive//:rocprim",
 	]),
 )
 
@@ -3592,7 +3586,7 @@ tf_kernel_library(
 tf_kernel_library(
     name = "topk_op",
     prefix = "topk_op",
-    deps = NN_DEPS + if_cuda(["@cub_archive//:cub"]) + if_rocm(["@rocprim_archive//:rocprim"]),
+    deps = NN_DEPS + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
@@ -3615,8 +3609,7 @@ tf_kernel_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//third_party/eigen3",
-    ] + if_cuda(["@cub_archive//:cub"])
-    + if_rocm(["@rocprim_archive//:rocprim"]),
+    ] + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
@@ -3627,8 +3620,7 @@ tf_kernel_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//third_party/eigen3",
-    ] + if_cuda(["@cub_archive//:cub"])
-    + if_rocm(["@rocprim_archive//:rocprim"]),
+    ] + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
@@ -3642,8 +3634,7 @@ tf_kernel_library(
         "//tensorflow/core:lib_internal",
         "//tensorflow/core:nn_grad",
         "//tensorflow/core:nn_ops_op_lib",
-    ] + if_cuda(["@cub_archive//:cub"])
-    + if_rocm(["@rocprim_archive//:rocprim"]),
+    ] + if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_gpu_cc_test(
